# multi-llm-chatbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/: app.py  config.py  llms.py  main.py
src/config/: settings.py
src/llms/: models.py
