[project]
name = "Chat_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.9",
    "botocore>=1.43.9",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.2",
    "langchain-litellm>=0.6.5",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "litellm>=1.85.0",
    "openai>=2.37.0",
    "pydantic-settings>=2.14.1",
    "pypdf>=6.11.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "unstructured>=0.22.29",
]
