[project]
name = "multi-llm-chatbot"
version = "0.1.0"
description = "Multi-provider AI chatbot with LiteLLM, LangChain agents, and Streamlit UI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-litellm>=0.6.5",
    "litellm>=1.85.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "watchdog>=6.0.0",
]
